# skymesh

./: .gitignore  Cargo.toml  LICENSE-APACHE2  LICENSE-MIT  README.md  Trunk.toml  build.rs  index.html  skymesh.js  skymesh_bg.wasm  sw.js
.github/workflows/: deploy.yml
assets/: manifest.json  sw.js  sw.template.js
src/: app.rs  camera.rs  import.rs  lib.rs  main.rs  model.rs  render.rs  shader.wgsl
src/import/: off.rs  ply.rs  stl.rs
src/import/off/: mesh.rs  parse.rs
src/import/ply/: mesh.rs  parse.rs
src/import/stl/: mesh.rs  parse.rs
